fixed findbugs warnings. Duplicate contents of cases statments